--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-inspector",
+  "name": "@xadn/react-inspector",
   "version": "2.3.0",
   "description": "Temporary fork of react-inspector",
   "keywords": [],
