--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "type": "git",
     "url": "https://github.com/xadn/react-inspector"
   },
+  "files": [
+    "build/react-inspector.js",
+    "build/react-inspector.map",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "build": "NODE_ENV=production BABEL_ENV=production webpack --config webpack.prod.config.js",
     "build:storybook": "build-storybook -o storybook-static",
